force-app/main/default/objects/Quality_Control__c/fields/Proper_spacing_at_baseboards_fireplace__c.field-meta.xml
<CustomField>
    <fullName>Proper_spacing_at_baseboards_fireplace__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <label>Proper spacing at baseboards &amp; fireplace</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>