force-app/main/default/objects/Quality_Control__c/fields/Protecting_grg_floor_while_mix_cutting__c.field-meta.xml
<CustomField>
    <fullName>Protecting_grg_floor_while_mix_cutting__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <label>Protecting grg floor while mix &amp; cutting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>