force-app/main/default/objects/Quality_Control__c/fields/QC_End_Date__c.field-meta.xml
<CustomField>
    <fullName>QC_End_Date__c</fullName>
    <formula>Work_Order__r.QCEnd_New__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QC End Date</label>
    <type>Date</type>
</CustomField>