force-app/main/default/objects/Quality_Control__c/fields/QC_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>QC_Start_Date__c</fullName>
    <formula>Work_Order__r.QCStart_New__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QC Start Date</label>
    <type>Date</type>
</CustomField>