force-app/main/default/objects/Quality_Control__c/fields/QCType__c.field-meta.xml
<CustomField>
    <fullName>QCType__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QCType</label>
    <type>Text</type>
</CustomField>