force-app/main/default/objects/Quality_Control__c/fields/Quality_Control_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Quality_Control_ID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quality Control ID(18)</label>
    <type>Text</type>
</CustomField>