force-app/main/default/objects/Quality_Control__c/fields/Seam_sealer_installed__c.field-meta.xml
<CustomField>
    <fullName>Seam_sealer_installed__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <label>Seam sealer installed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>