force-app/main/default/objects/Quality_Control__c/fields/Seam_sealer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Seam_sealer_Notes__c</fullName>
    <label>Seam sealer Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>