force-app/main/default/objects/Quality_Control__c/fields/Seams_Notes__c.field-meta.xml
<CustomField>
    <fullName>Seams_Notes__c</fullName>
    <label>Seams Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>