force-app/main/default/objects/Quality_Control__c/fields/Seams_properly_done_Notes__c.field-meta.xml
<CustomField>
    <fullName>Seams_properly_done_Notes__c</fullName>
    <label>Seams properly done Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>