force-app/main/default/objects/Quality_Control__c/fields/Shower_Bath_Configuration_Notes__c.field-meta.xml
<CustomField>
    <fullName>Shower_Bath_Configuration_Notes__c</fullName>
    <label>Shower/Bath Configuration Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>