force-app/main/default/objects/Quality_Control__c/fields/Shower_pan_drain_we_supply_notes__c.field-meta.xml
<CustomField>
    <fullName>Shower_pan_drain_we_supply_notes__c</fullName>
    <label>Shower pan &amp; drain/we supply Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>