force-app/main/default/objects/Quality_Control__c/fields/Shower_pan_ready_have_drain_we_supply__c.field-meta.xml
<CustomField>
    <fullName>Shower_pan_ready_have_drain_we_supply__c</fullName>
    <defaultValue>&quot;N/A&quot;</defaultValue>
    <label>Shower pan ready &amp; have drain/we supply?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>