force-app/main/default/objects/Quality_Control__c/fields/Sink_clips_Notes__c.field-meta.xml
<CustomField>
    <fullName>Sink_clips_Notes__c</fullName>
    <label>Sink clips Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>