force-app/main/default/objects/Quality_Control__c/fields/Sinkinstalledcorrectwithbracketclip__c.field-meta.xml
<CustomField>
    <fullName>Sinkinstalledcorrectwithbracketclip__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <label>Sink installed correct with bracket/clip</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>