force-app/main/default/objects/Quality_Control__c/fields/Sitecleanerthanwhenyouarrived__c.field-meta.xml
<CustomField>
    <fullName>Sitecleanerthanwhenyouarrived__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <label>Site cleaner than when you arrived</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>