force-app/main/default/objects/Quality_Control__c/fields/Slab_Adjustment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Slab_Adjustment_Notes__c</fullName>
    <label>Slab Adjustment Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>