force-app/main/default/objects/Quality_Control__c/fields/Spacing_baseboards_fire_place_Notes__c.field-meta.xml
<CustomField>
    <fullName>Spacing_baseboards_fire_place_Notes__c</fullName>
    <label>Spacing baseboards &amp; fire place Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>