force-app/main/default/objects/Quality_Control__c/fields/Spec_Form__c.field-meta.xml
<CustomField>
    <fullName>Spec_Form__c</fullName>
    <label>Spec Form</label>
    <type>Url</type>
</CustomField>