force-app/main/default/objects/Quality_Control__c/fields/Specific_Builder_repairs_required__c.field-meta.xml
<CustomField>
    <fullName>Specific_Builder_repairs_required__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <inlineHelpText>Pic if applicable</inlineHelpText>
    <label>Specific Builder repairs required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>