force-app/main/default/objects/Quality_Control__c/fields/Splash_caulked_Notes__c.field-meta.xml
<CustomField>
    <fullName>Splash_caulked_Notes__c</fullName>
    <label>Splash caulked Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>