force-app/main/default/objects/Quality_Control__c/fields/Spot_bonding_Notes__c.field-meta.xml
<CustomField>
    <fullName>Spot_bonding_Notes__c</fullName>
    <label>Spot bonding Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>