force-app/main/default/objects/Quality_Control__c/fields/Square_to_room_Notes__c.field-meta.xml
<CustomField>
    <fullName>Square_to_room_Notes__c</fullName>
    <label>Square to room Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>