force-app/main/default/objects/Quality_Control__c/fields/Stain_any_exposed_edges_of_tile__c.field-meta.xml
<CustomField>
    <fullName>Stain_any_exposed_edges_of_tile__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Includes niches, jacuzzi face, window seals, shower seats. Excludes where tile meets sheetrock, example shower walls.</inlineHelpText>
    <label>Stain any exposed edges of tile</label>
    <type>Checkbox</type>
</CustomField>