force-app/main/default/objects/Quality_Control__c/fields/Stain_match_floors_Notes__c.field-meta.xml
<CustomField>
    <fullName>Stain_match_floors_Notes__c</fullName>
    <label>Stain match floors Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>