force-app/main/default/objects/Quality_Control__c/fields/Stain_shower_edges_so_tile_meets_sheet__c.field-meta.xml
<CustomField>
    <fullName>Stain_shower_edges_so_tile_meets_sheet__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>DREES Only</inlineHelpText>
    <label>Stain shower edges so tile meets sheet</label>
    <type>Checkbox</type>
</CustomField>