force-app/main/default/objects/Quality_Control__c/fields/Stained_shoe_trim_stairnose_match__c.field-meta.xml
<CustomField>
    <fullName>Stained_shoe_trim_stairnose_match__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <inlineHelpText>Does it match the floor?</inlineHelpText>
    <label>Stained shoe, trim &amp; stairnose match</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>