force-app/main/default/objects/Quality_Control__c/fields/Status_Mobile_Change__c.field-meta.xml
<CustomField>
    <fullName>Status_Mobile_Change__c</fullName>
    <label>Status Mobile Change</label>
    <type>DateTime</type>
</CustomField>