force-app/main/default/objects/Quality_Control__c/fields/Tile_cut_Notes__c.field-meta.xml
<CustomField>
    <fullName>Tile_cut_Notes__c</fullName>
    <label>Tile cut Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>