force-app/main/default/objects/Quality_Control__c/fields/Tile_cut_off_on_correct_side_door_jamb__c.field-meta.xml
<CustomField>
    <fullName>Tile_cut_off_on_correct_side_door_jamb__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <label>Tile cut off on correct side door jamb</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>