force-app/main/default/objects/Quality_Control__c/fields/Trim_Baseboard_Notes__c.field-meta.xml
<CustomField>
    <fullName>Trim_Baseboard_Notes__c</fullName>
    <label>Trim/Baseboard Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>