force-app/main/default/objects/Quality_Control__c/fields/Trimmed_out_Notes__c.field-meta.xml
<CustomField>
    <fullName>Trimmed_out_Notes__c</fullName>
    <label>Trimmed out Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>