force-app/main/default/objects/Quality_Control__c/fields/Tub_Condition_Notes__c.field-meta.xml
<CustomField>
    <fullName>Tub_Condition_Notes__c</fullName>
    <label>Tub Condition Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>