force-app/main/default/objects/Quality_Control__c/fields/Tub_Deck_Notes__c.field-meta.xml
<CustomField>
    <fullName>Tub_Deck_Notes__c</fullName>
    <label>Tub Deck Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>