force-app/main/default/objects/Quality_Control__c/fields/Tubs_pans_covered_protected__c.field-meta.xml
<CustomField>
    <fullName>Tubs_pans_covered_protected__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <label>Tubs &amp; pans covered/protected</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>