force-app/main/default/objects/Quality_Control__c/fields/Tubs_pans_protected_Notes__c.field-meta.xml
<CustomField>
    <fullName>Tubs_pans_protected_Notes__c</fullName>
    <label>Tubs &amp; pans protected Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>