force-app/main/default/objects/Quality_Control__c/fields/Using_eye_protection_hard_hats__c.field-meta.xml
<CustomField>
    <fullName>Using_eye_protection_hard_hats__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <label>Using eye protection &amp; hard hats</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>