force-app/main/default/objects/Quality_Control__c/fields/Verify_Cabinets_in_Good_Condition__c.field-meta.xml
<CustomField>
    <fullName>Verify_Cabinets_in_Good_Condition__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Cabinets should be free of damage. Document any issues in Notes fields.</inlineHelpText>
    <label>Verify Cabinets in Good Condition</label>
    <type>Checkbox</type>
</CustomField>