force-app/main/default/objects/Quality_Control__c/fields/Verify_Garage_is_Clean__c.field-meta.xml
<CustomField>
    <fullName>Verify_Garage_is_Clean__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>There should be no trash present. Document any issues in the Notes field.</inlineHelpText>
    <label>Verify Garage is Clean</label>
    <type>Checkbox</type>
</CustomField>