force-app/main/default/objects/Quality_Control__c/fields/Wall_board_install_Notes__c.field-meta.xml
<CustomField>
    <fullName>Wall_board_install_Notes__c</fullName>
    <label>Wall board install Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>