force-app/main/default/objects/Quality_Control__c/fields/Wall_board_installed_w_screws_spacing__c.field-meta.xml
<CustomField>
    <fullName>Wall_board_installed_w_screws_spacing__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <inlineHelpText>Specify bath that needs attention</inlineHelpText>
    <label>Wall board installed w screws &amp; spacing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>