force-app/main/default/objects/Quality_Control__c/fields/Wall_Notes__c.field-meta.xml
<CustomField>
    <fullName>Wall_Notes__c</fullName>
    <label>Wall Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>