force-app/main/default/objects/Quality_Control__c/fields/Weep_holes_clear_free_of_grout__c.field-meta.xml
<CustomField>
    <fullName>Weep_holes_clear_free_of_grout__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <label>Weep holes clear &amp; free of grout</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>