force-app/main/default/objects/Quality_Control__c/fields/Weep_holes_Notes__c.field-meta.xml
<CustomField>
    <fullName>Weep_holes_Notes__c</fullName>
    <label>Weep holes Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>