force-app/main/default/objects/Quality_Control__c/fields/Wipe_down_cabinets_minor_grout_haze_etc__c.field-meta.xml
<CustomField>
    <fullName>Wipe_down_cabinets_minor_grout_haze_etc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wipe down cabinets/minor grout haze, etc</label>
    <type>Checkbox</type>
</CustomField>