force-app/main/default/objects/Quality_Control__c/fields/WO_Owner_Location__c.field-meta.xml
<CustomField>
    <fullName>WO_Owner_Location__c</fullName>
    <formula>TEXT(Work_Order__r.Owner:User.Location__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WO Owner Location</label>
    <type>Text</type>
</CustomField>