force-app/main/default/objects/Quality_Control__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Quality Control</relationshipLabel>
    <relationshipName>Quality_Control</relationshipName>
    <type>Lookup</type>
</CustomField>