force-app/main/default/objects/Quality_Control__c/fields/Work_Order_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_End_Date__c</fullName>
    <formula>Work_Order__r.Job_End_Day__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Order End Date</label>
    <type>Date</type>
</CustomField>