force-app/main/default/objects/Quality_Control__c/fields/Work_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Status__c</fullName>
    <formula>TEXT(Work_Order__r.Work_Order_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Order Status</label>
    <type>Text</type>
</CustomField>