force-app/main/default/objects/Quality_Control__c/fields/X1_8_between_tile_tub_pan_no_grout__c.field-meta.xml
<CustomField>
    <fullName>X1_8_between_tile_tub_pan_no_grout__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <label>1/8&quot; between tile &amp; tub/pan &amp; no grout</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>