force-app/main/default/objects/Quality_Control__c/fields/X1_8_between_tile_tub_pan_Notes__c.field-meta.xml
<CustomField>
    <fullName>X1_8_between_tile_tub_pan_Notes__c</fullName>
    <label>1/8&quot; between tile &amp; tub/pan Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>