force-app/main/default/objects/Quality_Control__c/recordTypes/Job_Start_Confirmation.recordType-meta.xml
<RecordType>
    <fullName>Job_Start_Confirmation</fullName>
    <active>true</active>
    <label>Job Start Confirmation</label>
</RecordType>