force-app/main/default/objects/Quality_Control__c/recordTypes/Pre_Walk.recordType-meta.xml
<RecordType>
    <fullName>Pre_Walk</fullName>
    <active>true</active>
    <label>Pre-Walk</label>
</RecordType>