force-app/main/default/objects/Quality_Control__c/recordTypes/QC_Build_Sheet.recordType-meta.xml
<RecordType>
    <fullName>QC_Build_Sheet</fullName>
    <active>true</active>
    <label>QC Build Sheet</label>
</RecordType>