force-app/main/default/objects/Quality_Control__c/recordTypes/QC_Carpet_Install.recordType-meta.xml
<RecordType>
    <fullName>QC_Carpet_Install</fullName>
    <active>true</active>
    <label>QC Carpet Install</label>
</RecordType>