force-app/main/default/objects/Quality_Control__c/recordTypes/QC_Countertops_Install.recordType-meta.xml
<RecordType>
    <fullName>QC_Countertops_Install</fullName>
    <active>true</active>
    <label>QC Countertops Install</label>
</RecordType>