force-app/main/default/objects/Quality_Control__c/recordTypes/QC_Fine_Tune_Checklist.recordType-meta.xml
<RecordType>
    <fullName>QC_Fine_Tune_Checklist</fullName>
    <active>true</active>
    <label>QC Fine Tune Checklist</label>
</RecordType>