force-app/main/default/objects/Quality_Control__c/recordTypes/QC_Floor_Tile_Install.recordType-meta.xml
<RecordType>
    <fullName>QC_Floor_Tile_Install</fullName>
    <active>false</active>
    <label>QC Floor Tile Install</label>
</RecordType>