force-app/main/default/objects/Quality_Control__c/recordTypes/QC_Floor_Wall_Tile_Install.recordType-meta.xml
<RecordType>
    <fullName>QC_Floor_Wall_Tile_Install</fullName>
    <active>true</active>
    <label>QC Floor &amp; Wall Tile Install</label>
</RecordType>