force-app/main/default/objects/Quality_Control__c/recordTypes/QC_LVT_Install.recordType-meta.xml
<RecordType>
    <fullName>QC_LVT_Install</fullName>
    <active>true</active>
    <label>QC LVT Install</label>
</RecordType>