force-app/main/default/objects/Quality_Control__c/recordTypes/QC_Product_Inspection.recordType-meta.xml
<RecordType>
    <fullName>QC_Product_Inspection</fullName>
    <active>true</active>
    <label>QC Product Inspection</label>
</RecordType>