force-app/main/default/objects/Quality_Control__c/recordTypes/QC_Tile_Backsplash_Install.recordType-meta.xml
<RecordType>
    <fullName>QC_Tile_Backsplash_Install</fullName>
    <active>true</active>
    <label>QC Tile Backsplash Install</label>
</RecordType>