force-app/main/default/objects/Quality_Control__c/recordTypes/QC_Vinyl_Install.recordType-meta.xml
<RecordType>
    <fullName>QC_Vinyl_Install</fullName>
    <active>true</active>
    <label>QC Vinyl Install</label>
</RecordType>