force-app/main/default/objects/Quality_Control__c/recordTypes/QC_Wall_Tile_Install.recordType-meta.xml
<RecordType>
    <fullName>QC_Wall_Tile_Install</fullName>
    <active>false</active>
    <label>QC Wall Tile Install</label>
</RecordType>