force-app/main/default/objects/Quality_Control__c/recordTypes/QC_Wood_Install.recordType-meta.xml
<RecordType>
    <fullName>QC_Wood_Install</fullName>
    <active>true</active>
    <label>QC Wood Install</label>
</RecordType>