force-app/main/default/objects/Quality_Control__c/validationRules/Action_Needed_picklist_value.validationRule-meta.xml
<ValidationRule>
    <fullName>Action_Needed_picklist_value</fullName>
    <active>false</active>
    <errorConditionFormula>LOWER($Label.SG_DisableValidations) != &quot;true&quot; &amp;&amp;
AND(
NOT( ISNEW() ),
AND(
OR(RecordType.Name = &quot;QC Product Inspection&quot;),
ISPICKVAL(Action_Needed__c,&quot;Please select a value&quot;),
ISPICKVAL( Status__c , &quot;Completed&quot;)
))</errorConditionFormula>
    <errorDisplayField>Action_Needed__c</errorDisplayField>
    <errorMessage>Please select either Yes or No</errorMessage>
</ValidationRule>