force-app/main/default/objects/Quality_Control__c/validationRules/Are_Countertops_Installed_picklist_value.validationRule-meta.xml
<ValidationRule>
    <fullName>Are_Countertops_Installed_picklist_value</fullName>
    <active>false</active>
    <errorConditionFormula>LOWER($Label.SG_DisableValidations) != &quot;true&quot; &amp;&amp;
AND(
NOT( ISNEW() ),
AND(
RecordType.Name = &quot;Job Start Confirmation&quot;,
ISPICKVAL(Are_Countertops_Installed__c,&quot;Please select a value&quot;),
ISPICKVAL( Status__c , &quot;Completed&quot;)
))</errorConditionFormula>
    <errorDisplayField>Are_Countertops_Installed__c</errorDisplayField>
    <errorMessage>Please select either Yes or No</errorMessage>
</ValidationRule>