force-app/main/default/objects/Quality_Control__c/validationRules/Areas_damaged_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Areas_damaged_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>LOWER($Label.SG_DisableValidations) != &quot;true&quot; &amp;&amp;
AND(
NOT( ISNEW() ),
AND(
OR(RecordType.Name = &quot;QC Carpet Install&quot;), 
ISPICKVAL(Areanyareasdamaged__c,&quot;Please select a value&quot;),
ISPICKVAL( Status__c , &quot;Completed&quot;)
))</errorConditionFormula>
    <errorDisplayField>Areanyareasdamaged__c</errorDisplayField>
    <errorMessage>Please select either Yes/No or N/A</errorMessage>
</ValidationRule>