force-app/main/default/objects/Quality_Control__c/validationRules/Backsplash_ran_to_edge_of_picklist_value.validationRule-meta.xml
<ValidationRule>
    <fullName>Backsplash_ran_to_edge_of_picklist_value</fullName>
    <active>false</active>
    <errorConditionFormula>LOWER($Label.SG_DisableValidations) != &quot;true&quot; &amp;&amp;
AND(
NOT( ISNEW() ),
AND(
RecordType.Name = &quot;QC Tile Backsplash Install&quot;,
ISPICKVAL(Backsplash_ran_to_edge_of_counter_top__c,&quot;Please select a value&quot;),
ISPICKVAL( Status__c , &quot;Completed&quot;)))</errorConditionFormula>
    <errorDisplayField>Backsplash_ran_to_edge_of_counter_top__c</errorDisplayField>
    <errorMessage>Please select either Yes or No</errorMessage>
</ValidationRule>